--- a/index.html
+++ b/index.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>An awesome website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="header">
         <div class="logo">Header Logo</div>
         <ul class="links">
-           <li><a href="">header link one</a></li> 
-           <li><a href="">header link two</a></li>
-           <li><a href="">header link three</a></li>
-        </div>
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link two</a></li>
+            <li><a href="">header link three</a></li>
+    </div>
     </div>
     <div class="hero-container">
         <div class="hero-content">
             <div class="title">This website is awesome</div>
-            <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and
+                the color is lower contrast</div>
             <button>Sign up</button>
         </div>
-        <img src="images/vault-boy.jpg">
+        <div>
+            <img src="images/Scout-Approved_Emote.webp">
+        </div>
     </div>
     <div class="content">
         <div class="information">
-            <div class="title">Some random information</div>
+            <div class="title">Pop quiz</div>
             <div class="card-container">
                 <div class="card">
-                    <img src="./images/barberry.png">
-                    <div class="text">This is some subtext under an illustration or image</div>
-                    <img src="./images/chilli.png">
-                    <div class="text">This is some subtext under an illustration or image</div>
-                    <img src="./images/pepper.png">
-                    <div class="text">This is some subtext under an illustration or image</div>
-                    <img src="./images/saffron.png">
-                    <div class="text">This is some subtext under an illustration or image</div>
+                    <img src="./images/Smite.webp">
+                    <div class="text">Can you guess from game are these icons from?</div>
+                </div>
+                <div class="card">
+                    <img src="./images/Barrier.webp">
+                    <div class="text">These are in game spell icons from a really popular in the MOBA genre</div>
+                </div>
+                <div class="card">
+                    <img src="./images/Exhaust.webp">
+                    <div class="text">The game was released in 2009 and it's still being played today!</div>
+                </div>
+                <div class="card">
+                    <img src="./images/Flash.webp">
+                    <div class="text">This icon should make it obvious really, I can't give you any more hints</div>
                 </div>
             </div>
         </div>
         <div class="quote-container">
-            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</div>
-            <div class="author">-Thor, God of Thunder</div>
+            <div class="quote">“I am <strong>Andrew Ryan</strong>, and I'm here to ask you a question. <em>Is a man
+                    not entitled to the sweat of his brow?</em> <em class="text-highlight">'No!' says the man in
+                    Washington</em>, <em>'It belongs to the poor.'</em> <em class="text-highlight">'No!' says the man in the Vatican</em>, <em>'It belongs
+                to God.</em>' <em class="text-highlight">'No!' says the man in Moscow</em>, <em>'It belongs to everyone.</em>' I rejected those answers; instead, I
+                chose something different. I chose the impossible. <em class="text-highlight">I chose... Rapture</em>, a city where <em>the artist would not
+                fear the censor</em>, where <em>the scientist would not be bound by petty morality</em>, Where <em>the great would not be
+                constrained by the small!</em> And with the sweat of your brow, <em class="text-highlight">Rapture can become your city as well.</em>”</div>
+            <div class="author">- Andrew Ryan, Bioshock</div>
         </div>
         <div class="call-to-action">
             <div class="content">
@@ -55,4 +72,5 @@
         Copyright © The Odin Project 2021
     </div>
 </body>
+
 </html>
